commit de arquivos

--- a/app/configs/config.ini
+++ b/app/configs/config.ini
@@ -5,8 +5,8 @@ charset     = UTF8
 profiler    = false
 persistent  = false
 user		    = root
-password    = ''
-host        = localhost
+password    = 'j3mys0n@6323'
+host        = 45.55.168.9
 dbname      = sisnf
 caseFolding = 2
 autoQuoteIdentifiers = false
